<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    tools:context="com.careator.linkeddd.MainActivity">

    <LinearLayout
        android:id="@+id/gmailprofiledisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/nametv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/username" />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/emailtv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/email" />

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/signout"
                android:background="@color/signout"
                android:layout_gravity="center"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="40dp"
                android:textColor="@color/white"
                android:text="@string/signout" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/fbprofiledisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text1" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text2" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text3" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="350dp"
        android:layout_gravity="center_vertical"
        android:id="@+id/gmaillikedinlogbut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleSignIn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"></com.google.android.gms.common.SignInButton>

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/linkedInGoogle"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="LOGIN WITH LINKEDIN"
            android:background="@color/hoho" />

    </LinearLayout>

    <LinearLayout

        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:id="@+id/fbbuttondisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fbLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linkedinprofiledisplay"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/profile_pic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/details" />

        <TextView
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/details" />

        <TextView
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/details" />

        <TextView
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/details" />
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/linkedinlogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/hoho"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="Logout"/>


    </LinearLayout>


</LinearLayout>
